err/ant-nest.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyMySQL-0.7.11.dist-info'...
Listing './lib/python3.5/site-packages/_pytest'...
Listing './lib/python3.5/site-packages/_pytest/_code'...
Listing './lib/python3.5/site-packages/_pytest/assertion'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.6.dist-info'...
Listing './lib/python3.5/site-packages/aiomysql'...
Listing './lib/python3.5/site-packages/aiomysql/sa'...
Listing './lib/python3.5/site-packages/aiomysql-0.0.11.egg-info'...
Listing './lib/python3.5/site-packages/aiosmtplib'...
Listing './lib/python3.5/site-packages/aiosmtplib-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/ant_nest'...
Compiling './lib/python3.5/site-packages/ant_nest/queen.py'...
***   File "./lib/python3.5/site-packages/ant_nest/queen.py", line 165
    yield await coro
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/ant_nest-0.25.0.egg-info'...
Listing './lib/python3.5/site-packages/async_generator'...
Listing './lib/python3.5/site-packages/async_generator-1.8.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/coverage'...
Listing './lib/python3.5/site-packages/coverage/fullcoverage'...
Listing './lib/python3.5/site-packages/coverage/htmlfiles'...
Listing './lib/python3.5/site-packages/coverage-4.4.2.dist-info'...
Listing './lib/python3.5/site-packages/jpath-1.5.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/monotonic-1.4.dist-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pluggy'...
Listing './lib/python3.5/site-packages/pluggy-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pymysql'...
Listing './lib/python3.5/site-packages/pymysql/constants'...
Listing './lib/python3.5/site-packages/pymysql/tests'...
Listing './lib/python3.5/site-packages/pymysql/tests/thirdparty'...
Listing './lib/python3.5/site-packages/pymysql/tests/thirdparty/test_MySQLdb'...
Listing './lib/python3.5/site-packages/pytest-3.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pytest_asyncio'...
Listing './lib/python3.5/site-packages/pytest_asyncio-0.8.0.dist-info'...
Listing './lib/python3.5/site-packages/pytest_cov'...
Listing './lib/python3.5/site-packages/pytest_cov-2.5.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tenacity'...
Listing './lib/python3.5/site-packages/tenacity/tests'...
Listing './lib/python3.5/site-packages/tenacity-4.8.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/pep492'...
Listing './lib/python3.5/site-packages/tests/sa'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.16.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
